fix bugs with inputTextAndSelect showing activeOption, add EInputsContainerDirection at WrapperRectangleInput for select the position wo classNames, add notify to copyLink at FooterMiddle, fix ProductH description text-overflow & add link to product

--- a/src/entities/Product/ui/Vertical/ui/item/_ProductV.module.scss
+++ b/src/entities/Product/ui/Vertical/ui/item/_ProductV.module.scss
@@ -12,9 +12,7 @@
             height: 276px;
             border-radius:  16px 16px 0 0;
 
-    
             @media (width <= 768px) {
-                width: 100%;
                 height: 145px;
             }
         }
