--- a/src/shared/ui/Wrapper/RectangleInput/ui/_WrapperRectangleInput.module.scss
+++ b/src/shared/ui/Wrapper/RectangleInput/ui/_WrapperRectangleInput.module.scss
@@ -114,7 +114,6 @@
 
         .inputsContainer {
             display: flex;
-            flex-direction: column;
             gap: 5px;
             background-color: var(--tertiary-surface-low);
             padding: 5px;
@@ -266,4 +265,12 @@
             }
         }
     }
+}
+
+//INPUTS_CONTAINER_DIRECTION
+.row{
+    flex-direction: row;
+}
+.column{
+    flex-direction: column;
 }
